--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -655,5 +655,8 @@ disposition rather than other common dispositions for Latin languages. [CHAR LIM
 
     <string name="language_to">LanguageTo</string>
     <string name="language_from">LanguageFrom</string>
+    <string name="title_camera">Camera</string>
+    <string name="chat">Chat</string>
+    <string name="enter_some_text_to_translate">Enter some text to translate.</string>
 
 </resources>
