--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -674,5 +674,8 @@ disposition rather than other common dispositions for Latin languages. [CHAR LIM
     <string name="subscription_activated">Subscription Activitrd</string>
     <string name="remind_me_later"><u>Remind me later</u></string>
     <string name="show_details"><u>Show Details</u></string>
+    <string name="select_app_language">Select App Language</string>
+    <string name="done">Done</string>
+    <string name="may_be_later">May be later</string>
 
 </resources>
